--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </header>
     <main>
         <div class="divBotones">
+            
             <button id="guitarrahtml">guitarra</button>
             <button id="bateriahtml">bateria</button>
         </div>
-        <div class="carrito">
+        <div id="carrito">
             <h3>Carrito</h3>
             <ul id="carritoUL">
                 <li id="carritoVacio">carrito vacio</li>
