arreglo de borrar div carritovacio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="carrito">
             <h3>Carrito</h3>
             <ul id="carritoUL">
-                <li id="carritoVacio">carrito vacio</li>
+                <li id="carritoVacio">Carrito vacio</li>
             </ul>
             <div id="precioTotal"></div>
         </div>
